• Fixes issue where, when anime title is too long it distorts the look of the closerlook page

--- a/anime-archive/src/components/banner/Banner.css
+++ b/anime-archive/src/components/banner/Banner.css
@@ -12,4 +12,13 @@
   position: absolute;
   color: #ffffff;
   top: 30px;
+  padding: 0 2%;
+}
+
+.bannerText h3 {
+  text-align: center;
+  max-width: 100%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
